--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 body,html{
     margin: 0;
     padding: 0;
 }
+
 
 .background {
     background-color: #68C7FF;
@@ -10,7 +14,6 @@ body,html{
     height: 100%;
     position: fixed;
 }
-
 #wavy-circle{
     transform: scale(1.15);
 }
@@ -20,15 +23,6 @@ body,html{
     background-color: #ffa5c655;
     filter: brightness(1.3);
 }
-
-/* #border-hole{
-    transform: scale(1.03);
-    background-color: #266dde;
-}
-#border-hole1{
-    transform: scale(1.02);
-    background-color: white;
-} */
 
 @keyframes float {
     0% {
@@ -62,4 +56,77 @@ body,html{
     width: 800px; 
     height: 800px; 
     object-fit:cover;
+    filter: brightness(1.2) saturate(2.7) contrast(0.7) hue-rotate(340deg)
+}
+
+.login-container{
+    position: fixed;
+    right:10%;
+    top:10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 40vw;
+    h4{
+        background-color: whitesmoke;
+        padding: 4px 60px;
+        font-size: large;
+        color: #DF608F;
+        font-family: "Poppins", sans-serif;
+        font-weight: 600;
+        letter-spacing: 2px;
+    }
+    h1{
+        margin: 0;
+        margin-bottom: 20px;
+        font-size: 4rem;
+        color:#004B84;
+        font-family: "Poppins", sans-serif;
+        font-weight: 500;
+        text-align: center;
+        max-width: 70%;
+    }
+}
+
+.login-form{
+    display: flex;
+    flex-direction: column;
+    height: 25vh;
+    justify-content: space-evenly;
+    align-items: center;
+
+    input{
+        padding: 10px 16px 6px 6px;
+        min-width:300px ;
+        border: 2px solid #004B84;
+        background-color: #009cfd;
+        margin-top: 10px;
+        
+    }
+    input::placeholder{
+        color: #68C7FF;
+        font-size: medium;
+    }
+
+    .login-button{
+        width: 300px;
+        padding: 16px 8px;
+        border-radius: 48px;
+        margin-top: 20px;
+        background-color: white;
+        border: 4px solid #009cfd;
+        font-size:large;
+        font-family: "Poppins", sans-serif;
+        font-weight: 500;
+        letter-spacing: 4px;
+    }
+}
+
+@media (max-width:600px) {
+    .fancy-hole{
+        top:10%;
+        
+    }
+    
 }
