--- a/styles.css
+++ b/styles.css
@@ -4,70 +4,75 @@
 body,html{
     margin: 0;
     padding: 0;
+    background-color: #68C7FF;
 }
 
 
 .background {
-    background-color: #68C7FF;
-    top:0;
-    width: 100%;
-    height: 100%;
-    position: fixed;
+
 }
 #wavy-circle{
-    transform: scale(1.15);
+    transform: scale(2);
+    position: absolute;
+    top: 50%; 
+    left: 30%; 
+    width: 500px; 
+    height: 500px;
+    transform: translate(-50%,-50%) rotate(90deg);
+    animation: float 3s ease-in-out infinite;
+    z-index: 2;
+    
 }
 
-#overlay-hole{
-    z-index: 30;
-    background-color: #ffa5c655;
-    filter: brightness(1.3);
+#background-img{
+    position: fixed;
+    top:0;
+    left: 0;
+    z-index: 1;
+    max-width: 100%;
+    max-height: 120%;
+
+}
+
+.background img {
+    position: absolute;
+    transform: scale(0.8);
+    top: 50%; 
+    z-index: 2;
+    left: 30%; 
+    transform: translate(-50%,-50%);
+    width: 400px; 
+    height: 400px; 
+    object-fit:cover;
+    animation: float 3s ease-in-out infinite;
 }
 
 @keyframes float {
     0% {
-        transform: translateY(0);
+        transform: translate(-50%,-50%) translateY(0);
     }
     50% {
-        transform: translateY(-20px);
+        transform:translate(-50%,-50%) translateY(-20px);
     }
     100% {
-        transform: translateY(0);
+        transform: translate(-50%,-50%) translateY(0);
     }
 }
 
-.fancy-hole {
-    position: fixed;
-    top: 10%;
-    left: 8%;
-    width: 600px; 
-    height: 600px;
-    clip-path: url(#wavy-circle); 
-    overflow: hidden;
-    transform: rotate(0deg); 
-    animation: float 3s ease-in-out infinite;
-}
 
-.fancy-hole img {
-    position: absolute;
-    transform: scale(0.8);
-    top: -17%; 
-    left: -17%; 
-    width: 800px; 
-    height: 800px; 
-    object-fit:cover;
-    filter: brightness(1.2) saturate(2.7) contrast(0.7) hue-rotate(340deg)
-}
+
+
 
 .login-container{
     position: fixed;
-    right:10%;
+    right:0;
     top:10%;
+    z-index: 3;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    width: 40vw;
+    width: 30vw;
     h4{
         background-color: whitesmoke;
         padding: 4px 60px;
@@ -85,14 +90,14 @@ body,html{
         font-family: "Poppins", sans-serif;
         font-weight: 500;
         text-align: center;
-        max-width: 70%;
     }
 }
 
 .login-form{
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
-    height: 25vh;
+    height: 30vh;
     justify-content: space-evenly;
     align-items: center;
 
@@ -126,7 +131,7 @@ body,html{
 @media (max-width:600px) {
     .fancy-hole{
         top:10%;
-        
+        transform: scale();
     }
     
 }
