--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body,html{
     left: 0;
     z-index: 1;
     max-width: 100%;
-    max-height: 120%;
+    max-height: 100%;
 
 }
 
@@ -65,7 +65,7 @@ body,html{
 
 .login-container{
     position: fixed;
-    right:0;
+    right:6%;
     top:10%;
     z-index: 3;
     display: flex;
